Commit code vanuit charm

--- a/notebooks/registration_project.ipynb
+++ b/notebooks/registration_project.ipynb
@@ -115,18 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'registration_util'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-6a0ef80aa12c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../code\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mregistration_util\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mI_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'../data/image_data/1_1_t1.tif'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'registration_util'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:\n",
+      "[[254.02356594 156.31778247]\n",
+      " [152.52238091 137.11831594]]\n",
+      "Xm:\n",
+      "[[173.81359942 223.98683958]\n",
+      " [169.24679429 145.48052264]]\n"
      ]
     }
    ],
@@ -157,10 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../code\")\n",
+    "import registration_util as util\n",
+    "\n",
+    "I_path = '../data/image_data/3_2_t1.tif'\n",
+    "Im_path = '../data/image_data/3_2_t2.tif'\n",
+    "\n",
+    "X, Xm = util.my_cpselect(I_path, Im_path)\n",
+    "\n",
+    "pbr(X,Xm)"
+   ]
   },
   {
    "cell_type": "markdown",
