--- a/notebooks/registration_project.ipynb
+++ b/notebooks/registration_project.ipynb
@@ -264,10 +264,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'intensity_based_registration' from 'registration_project' (../code\\registration_project.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-241c8f1dbf6a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../code\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mregistration_project\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mintensity_based_registration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mI_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'../data/image_data/1_1_t1.tif'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'intensity_based_registration' from 'registration_project' (../code\\registration_project.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# 1:\n",
+    "%matplotlib inline\n",
+    "import sys\n",
+    "sys.path.append(\"../code\")\n",
+    "from registration_project import intensity_based_registration\n",
+    "\n",
+    "I_path = '../data/image_data/1_1_t1.tif'\n",
+    "Im_path = '../data/image_data/1_1_t1_d.tif'\n",
+    "\n",
+    "intensity_based_registration(I_path,Im_path,0)\n",
+    "\n",
+    "# Evaluation: This registration seems to do OK. A problem is, however, that one may never\n",
+    "# align the two pictures perfectly via rigid registration due to the absence of scale- and shear-\n",
+    "# degrees of freedom."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2:\n",
+    "%matplotlib inline\n",
+    "import sys\n",
+    "sys.path.append(\"../code\")\n",
+    "from registration_project import intensity_based_registration\n",
+    "\n",
+    "I_path = '../data/image_data/1_1_t1.tif'\n",
+    "Im_path = '../data/image_data/1_1_t1_d.tif'\n",
+    "\n",
+    "intensity_based_registration(I_path,Im_path,1)\n",
+    "\n",
+    "# Problems with affine_corr / affine_mi functions. We can sort this out together using Rick's code tomorrow"
+   ]
   }
  ],
  "metadata": {
